--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -1,11 +1,12 @@
 <h1>Users</h1>
-<table>
-  <tr><th>Id</th><th>Name</th><th>Email</th></tr>
-  <tr *ngFor="let user of users">
-    <td>{{user.id}}</td>
-    <td><a routerLink="/users/{{user.id}}/edit">{{user.name}}</a></td>
-    <td>{{user.email}}</td>
-  </tr>
-</table>
-
-<a routerLink="/users/new">Create user</a>
+<div class="mat-elevation-z8">
+  <table>
+    <tr><th>Id</th><th>Name</th><th>Email</th></tr>
+    <tr *ngFor="let user of users">
+      <td>{{user.id}}</td>
+      <td><a routerLink="/users/{{user.id}}/edit">{{user.name}}</a></td>
+      <td>{{user.email}}</td>
+    </tr>
+  </table>
+</div>
+<a  mat-raised-button color="primary" routerLink="/users/new">Create user</a>
