--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -4,7 +4,7 @@
     <tr><th>Id</th><th>Name</th><th>Email</th></tr>
     <tr *ngFor="let user of users">
       <td>{{user.id}}</td>
-      <td><a routerLink="/users/{{user.id}}/edit">{{user.name}}</a></td>
+      <td><a routerLink="/users/{{user.id}}">{{user.name}}</a></td>
       <td>{{user.email}}</td>
     </tr>
   </table>
